--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = c1b3b35fb
+	base = b64b943f9
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = c1b3b35fb
