--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 217cbff9d
+	base = 7f39599fd
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 217cbff9d
