--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 8c4e4e09e
+	base = 4bb85b87a
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = 8c4e4e09e
