--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 851ff6289
+	base = 6e4288839
 	trim = moveit_common
-	trimbase = 
+	trimbase = 851ff6289
