--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 8cc2bf8c8
+	base = 50e13534f
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = 8cc2bf8c8
