--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 9a58b264b
+	base = 890dbb747
 	trim = moveit_py
-	trimbase = 
+	trimbase = 9a58b264b
