--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 63aafa4c8
+	base = f5f446fe1
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = 63aafa4c8
