--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 728b4d991
+	base = 28ce0d62e
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = 728b4d991
