--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 3c0d48b19
+	base = d02f9809f
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = 3c0d48b19
