--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 0bfb85465
+	base = 8e80b9027
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = 0bfb85465
