--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = b0def9c21
+	base = f72c38e68
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = b0def9c21
