--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 4bcb29f05
+	base = 0cc3e3bfc
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = 4bcb29f05
