--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 44f73d856
+	base = d7eb65fc5
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = 44f73d856
