--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 91cb02db8
+	base = 88ba30698
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = 91cb02db8
