--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 5975ee5e6
+	base = 368822cc3
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 5975ee5e6
