--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = abfe1da3e
+	base = 168bdf8c4
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = abfe1da3e
