--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = e9e73d966
+	base = b554ddc7b
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = e9e73d966
