--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 7771313b6
+	base = d3bf9bfac
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 7771313b6
