--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 2061eda5e
+	base = bc59dae49
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = 2061eda5e
