--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 1fa63b209
+	base = c330e1eb5
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = 1fa63b209
