--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = c5d5b5a3a
+	base = 567937f10
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 
+	trimbase = c5d5b5a3a
