--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = d2c630f40
+	base = f81dee860
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 
+	trimbase = d2c630f40
