--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 2e596ead6
+	base = c898a24a0
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 2e596ead6
