--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = b6b6c7d01
+	base = db435b65e
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 
+	trimbase = b6b6c7d01
