--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 10d08b40f
+	base = b4be44bd3
 	trim = moveit
-	trimbase = 
+	trimbase = 10d08b40f
