--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 0dd187a6b
+	base = 9b3ab17ad
 	trim = moveit_core
-	trimbase = 
+	trimbase = 0dd187a6b
