--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 0aea6e375
+	base = 8af336fac
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 0aea6e375
