--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = b130abcea
+	base = 99452b46f
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = 
+	trimbase = b130abcea
