--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = a39ee8f92
+	base = ca8104921
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = a39ee8f92
