--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = e4364565f
+	base = 5ea8e0270
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = e4364565f
