--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 7a5205672
+	base = 32c91023a
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 7a5205672
