--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 49845e55b
+	base = 38238200f
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = 49845e55b
