--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 5856ded12
+	base = f381f6c0f
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 
+	trimbase = 5856ded12
