--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 3ea0d049b
+	base = 6d2b5e698
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = 3ea0d049b
