--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 1dd4509f6
+	base = aca0fbc47
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = 1dd4509f6
