--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 046c2e3d5
+	base = 3ed96b9e8
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = 046c2e3d5
