--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = fe8765f54
+	base = f0ac67c6f
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = fe8765f54
