--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = a78f68d29
+	base = 4ecb0b6f8
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = a78f68d29
