--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 0d51ace4b
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = a171f70ed
+	trimbase = 
