--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 6b917769e
+	base = d3d7ecaf5
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 6b917769e
