--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = a4992db07
+	base = bf92ed0a9
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = a4992db07
