--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 923f866ab
+	base = ee71364b9
 	trim = moveit_common
-	trimbase = 
+	trimbase = 923f866ab
