--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = d82890a00
+	base = 922d5ff74
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = d82890a00
