--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 9649c0d6c
+	base = 14fd0e66c
 	trim = moveit_py
-	trimbase = 
+	trimbase = 9649c0d6c
