--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = a5cc266af
+	base = 84b89792c
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = a5cc266af
