--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 453185477
+	base = 9bdc3e20b
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = 453185477
