--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = d1b74ce81
+	base = c985b51d3
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = d1b74ce81
