--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = a43f79b34
+	base = cef56d340
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = a43f79b34
