--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 5aea0bfd7
+	base = 7251830ae
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = 5aea0bfd7
