--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = c4dceac59
+	base = ba4d2d567
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = c4dceac59
