--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 4a0cf50f2
+	base = 5fb2e494e
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = 4a0cf50f2
