--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 51c0cbbef
+	base = af7ee1c9d
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = 51c0cbbef
