--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 9974e1408
+	base = a5707f1f0
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 9974e1408
