--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 4bad4b500
+	base = 1c0a1cd6b
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = 4bad4b500
