--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = eb52cae3b
+	base = c7422505a
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = eb52cae3b
