--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 39a832779
+	base = 776dd5097
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 39a832779
