--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = aa7d9eed6
+	base = 53f428706
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = aa7d9eed6
