--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 45a122a66
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 7f905c212
+	trimbase = 
