--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = c97aa1246
+	base = 74385760f
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = c97aa1246
