--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 75a8d575e
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 1a39aad8a
+	trimbase = 
