--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 33df6bf3a
+	base = 71b92badb
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 
+	trimbase = 33df6bf3a
