--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 76752dc59
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 786ca407d
+	trimbase = 
