--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = e533e21bd
+	base = 0ecd81fbf
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = e533e21bd
