--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 9691ec8b2
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 39e5deec9
+	trimbase = 
