--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 758c24bc2
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = e497ddbad
+	trimbase = 
