--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 4a02df3de
+	base = 460cb49aa
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 4a02df3de
