--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 54252f7da
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 302c355a9
+	trimbase = 
