--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 7d032f1cd
+	base = fed711d2b
 	trim = moveit
-	trimbase = 
+	trimbase = 7d032f1cd
