--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 392d15b4c
+	base = 75c9d0db1
 	trim = moveit_core
-	trimbase = 
+	trimbase = 392d15b4c
