--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 1dde3cb66
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 275b2e808
+	trimbase = 
