--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 894b7268e
+	base = 8096b1522
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 894b7268e
