--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = eaf80a580
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = 886d23b27
+	trimbase = 
