--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = ea64a30b5
+	base = de0ec5fb5
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = 
+	trimbase = ea64a30b5
