--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = d6edef636
+	base = 867e3f855
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = d6edef636
