--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = c3f405cf6
+	base = 68c82c5b7
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = c3f405cf6
