--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 756c16c31
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 02c9dfde6
+	trimbase = 
