--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = b43b803b6
+	base = 18d53422a
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = b43b803b6
