--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 1f559af6c
+	base = 51745535b
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = 1f559af6c
