--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 8d0b00dc5
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 5f23e6b95
+	trimbase = 
