--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = 6da0143a8
+	base = 289f02655
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 
+	trimbase = 6da0143a8
