--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = 99d82d520
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 783b4d55f
+	trimbase = 
