--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = f5b4c12a3
+	base = a29af5726
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = f5b4c12a3
