--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c79e9180b
 	base = e9ee3fc4f
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 6fb851a7b
+	trimbase = 
