--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = dfd29f37e
+	base = 3fad778cc
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = dfd29f37e
