--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = e7c26c50f
+	base = 54a047fbe
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = e7c26c50f
