--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1b159032b
-	base = df1ec0214
+	base = bc871bccd
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = df1ec0214
