--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/run_moveit_cpp
-	previous = 
-	base = ecdfd3ece
+	previous = ecdfd3ece
+	base = 1276cd121
 	trim = 
 	trimbase = 
