--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 65858e3bd
+	base = 1f0266fa7
 	trim = moveit_py
-	trimbase = 
+	trimbase = 65858e3bd
