--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 03c253a34
+	base = 0775dfedd
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = 03c253a34
