--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 64c3b7858
+	base = 38f6e376b
 	trim = moveit_core
-	trimbase = 
+	trimbase = 64c3b7858
