--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = fa20370ae
+	base = 35f915438
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = fa20370ae
