--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 28739cc7f
+	base = 9309b7700
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = 28739cc7f
