--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 3cb7db4f2
+	base = 2d0dfbd79
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = 3cb7db4f2
