--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 852aaaa61
+	base = 229f4ef1f
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = 852aaaa61
