--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 5e4afe24b
+	base = 2d58a3f33
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 5e4afe24b
