--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 76d9b8273
+	base = 993bc7a4c
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = 76d9b8273
