--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = d766ddf5c
+	base = 29d6304b8
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = d766ddf5c
