--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 0e36d307a
+	base = b6a6994ac
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 0e36d307a
