--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = f7b0834f5
+	base = 39844fb6c
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = f7b0834f5
