--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 56e076d9c
+	base = a69dce71c
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = 56e076d9c
