--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 33222c038
+	base = 43ec5a501
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = 33222c038
