--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 0c08cccdb
+	base = 1d4dd1224
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = 0c08cccdb
