--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = c898a24a0
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 2e596ead6
+	trimbase = 
