--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 476d68cbb
+	base = 540c0182e
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 476d68cbb
