--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = 567937f10
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = c5d5b5a3a
+	trimbase = 
