--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = e1f336c00
+	base = 177a0dad9
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 
+	trimbase = e1f336c00
