--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = db435b65e
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = b6b6c7d01
+	trimbase = 
