--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = b6acf3923
+	base = fc7c77ba6
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 
+	trimbase = b6acf3923
