--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = f81dee860
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = d2c630f40
+	trimbase = 
