--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = d98e4022d
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 0d8d5c3f0
+	trimbase = 
