--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = f308639e8
+	base = 16e2638a1
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = f308639e8
