--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = c330e1eb5
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 1fa63b209
+	trimbase = 
