--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 560d0880d
+	base = 499d5ca3c
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = 560d0880d
