--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = 32c91023a
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 7a5205672
+	trimbase = 
