--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 8652ae58a
+	base = 1fd67145e
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 8652ae58a
