--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = 99452b46f
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = b130abcea
+	trimbase = 
