--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 74f20761b
+	base = 151da33f6
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = 
+	trimbase = 74f20761b
