--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = dbdcafb6d
+	base = 2a23459dc
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = dbdcafb6d
