--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 72bd33379
+	base = cfc5dccbd
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = 72bd33379
