--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 14d379180
+	base = 542bd15f3
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 14d379180
