--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = aca0fbc47
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 1dd4509f6
+	trimbase = 
