--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 4451ac5f3
+	base = 54d69f786
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = 4451ac5f3
