--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 3da6869ac
+	base = 469ce1977
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = 3da6869ac
