--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = 6d2b5e698
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 3ea0d049b
+	trimbase = 
