--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = a5dc5fa64
+	base = 5e19d4e7a
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = a5dc5fa64
