--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = f381f6c0f
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 5856ded12
+	trimbase = 
