--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = ed69eab7a
+	base = aa8a71942
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = ed69eab7a
