--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = 2f5503265
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = a3d9b8c15
+	trimbase = 
