--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = be9b93df2
-	trim = 
-	trimbase = 
+	base = 1ffd03a1d
+	trim = moveit_planners/stomp
+	trimbase = be9b93df2
