--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 1fdf3d572
+	base = 4b6590b70
 	trim = moveit
-	trimbase = 
+	trimbase = 1fdf3d572
