--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 45ab65d0c
+	base = d2729abcd
 	trim = moveit_common
-	trimbase = 
+	trimbase = 45ab65d0c
