--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 1b159032b
 	base = 7f39599fd
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 217cbff9d
+	trimbase = 
