--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = efac6aa4d
+	base = 45ee65282
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = efac6aa4d
