--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 6414ceb2e
+	base = 206cad2b7
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = 6414ceb2e
