--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = a4e51d813
+	base = d1728204e
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = a4e51d813
