--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 57d409582
+	base = 4badae013
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = 57d409582
