--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c53336dfc
-	base = 12308ae8c
+	base = 8e093cc6a
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = 12308ae8c
