--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/moveit_planners_stomp
-	previous = 
-	base = 1ffd03a1d
+	previous = 1ffd03a1d
+	base = b4159ec6e
 	trim = 
 	trimbase = 
