--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/moveit_planners_stomp
-	previous = 
-	base = 08dd78f40
+	previous = 08dd78f40
+	base = 61d62734c
 	trim = 
 	trimbase = 
