--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/moveit_planners_stomp
-	previous = 
-	base = 5375f026b
+	previous = 5375f026b
+	base = 536d60ad1
 	trim = 
 	trimbase = 
