--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 0006a4bde
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 4b8fd425f
+	trimbase = 
