--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 4be2ec56c
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = f667831c1
+	trimbase = 
