--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 22e37e288
+	base = b56fc40b6
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 22e37e288
