--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 1e43b4594
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 3bf0e89eb
+	trimbase = 
