--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 551664cf6
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 77e18663d
+	trimbase = 
