--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 09902bce0
+	base = 86120aff2
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = 09902bce0
