--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = ae1670965
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 4c8f72259
+	trimbase = 
