--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 0d1d9fac6
+	base = 111f64264
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = 0d1d9fac6
