--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 88dafddf0
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = f8c5d3b92
+	trimbase = 
