--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = bbca7e8e2
+	base = 53c208cc5
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 
+	trimbase = bbca7e8e2
