--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 9e26b9611
+	base = b5b04b494
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = 9e26b9611
