--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 130e8775c
+	base = ea44b385d
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = 130e8775c
