--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = d8afa076a
+	base = 199099b34
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = d8afa076a
