--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = a685e30f8
+	base = 509c3ed03
 	trim = moveit_ros/trajectory_cache
-	trimbase = 
+	trimbase = a685e30f8
