--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 4cb2710d2
+	base = 41223c9ae
 	trim = moveit_ros/tests
-	trimbase = 
+	trimbase = 4cb2710d2
