--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = d78f9c9f9
+	base = 4e3761520
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = d78f9c9f9
