--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = b6d81de72
+	base = fac6cca65
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = b6d81de72
