--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 1ef099942
+	base = c136f05fd
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = 1ef099942
