--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = cd22db290
+	base = 05b60768e
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = cd22db290
