--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = f0833f1c1
+	base = c92398caa
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = f0833f1c1
