--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 8d8eb0b87
+	base = b1b1e025b
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 8d8eb0b87
