--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 86118c7e8
+	base = 7614e546b
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = 86118c7e8
