--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = e865569c3
+	base = c51183808
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = e865569c3
