--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 4f38b8c9a
+	base = 3065e02b1
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = 4f38b8c9a
