--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = f54aa236c
+	base = 4171a0c48
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = f54aa236c
