--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 7ddcc419e
+	base = 2a991d35b
 	trim = moveit_py
-	trimbase = 
+	trimbase = 7ddcc419e
