--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = c58de0a37
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = bb74c0fc9
+	trimbase = 
