--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 5db5bba78
+	base = a773a1390
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 5db5bba78
