--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 070a4bfb3
+	base = 0e3339b20
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = 070a4bfb3
