--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = ddf73050b
+	base = 8b1524fe1
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = ddf73050b
