--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 17927d66e
+	base = 5fa3355a3
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = 17927d66e
