--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 29f848e40
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = f2dcf3a3e
+	trimbase = 
