--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 6c271225b
+	base = 20c753f45
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = 6c271225b
