--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 769905431
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = dbfb605b6
+	trimbase = 
