--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 8e9f07958
+	base = 3e9fbb92d
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = 8e9f07958
