--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 915f66153
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 1e7efbc0a
+	trimbase = 
