--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 0b675038f
+	base = 0a1ce520a
 	trim = moveit_planners/stomp
-	trimbase = 
+	trimbase = 0b675038f
