--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = f3103f9c0
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = ba36218d0
+	trimbase = 
