--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 1b51c5753
+	base = 58c820b1d
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 
+	trimbase = 1b51c5753
