--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 431ed43ea
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = ef7b64438
+	trimbase = 
