--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 53cf0b5ff
+	base = 7fb9712a9
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 53cf0b5ff
