--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 679252ef9
+	base = 38eb2d165
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 679252ef9
