--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 8d55d6e73
+	base = f15e9a1bf
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = 8d55d6e73
