--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = bef448b6d
+	base = e13c5605f
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = bef448b6d
