--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 61cec6ef0
+	base = 23cdd2fa6
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = 61cec6ef0
