--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 7b7b798b8
+	base = f70c27463
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = 7b7b798b8
