--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 893581947
+	base = 80e664ea8
 	trim = moveit_core
-	trimbase = 
+	trimbase = 893581947
