--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 3f2603392
+	base = 1fdb9f53b
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = 3f2603392
