--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 24da8c0cd
+	base = fb86f8637
 	trim = moveit_common
-	trimbase = 
+	trimbase = 24da8c0cd
