--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = c079570be
+	base = a6187ebeb
 	trim = moveit
-	trimbase = 
+	trimbase = c079570be
