--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 59e898fbb
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 1a8a3eab4
+	trimbase = 
