--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 4274748cc
+	base = 32d83fad7
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 
+	trimbase = 4274748cc
