--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = aab057cb9
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 7bbd23af4
+	trimbase = 
