--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 8a89fce02
+	base = 5392964ad
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 8a89fce02
