--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 39dba325c
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = ec8ffa2fc
+	trimbase = 
