--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 592124df2
+	base = a9807a731
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 
+	trimbase = 592124df2
