--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 64c466045
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 64dec0559
+	trimbase = 
