--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 38315eb3a
+	base = 6f1b0a82c
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = 38315eb3a
