--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 6859e9570
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 4ddb7307e
+	trimbase = 
