--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 28aeb1f9a
+	base = e8c557aa0
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = 28aeb1f9a
