--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 04f25231e
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 02294e4d6
+	trimbase = 
