--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = a90c91369
+	base = c0826f3b4
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 
+	trimbase = a90c91369
