--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 30593c8c8
+	base = 969c1e593
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = 30593c8c8
