--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 3951ef0a4
+	base = 7110e1d23
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = 3951ef0a4
