--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 8ac428299
+	base = 32c86347d
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = 8ac428299
