--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 6298334f6
+	base = 17b71f9eb
 	trim = moveit_ros/trajectory_cache
-	trimbase = 
+	trimbase = 6298334f6
