--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 8be46e54a
+	base = b39c20673
 	trim = moveit_ros/tests
-	trimbase = 
+	trimbase = 8be46e54a
