--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 4415dd97c
+	base = 794febf49
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = 4415dd97c
