--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 448442248
+	base = 8afe4f849
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = 448442248
