--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = fdc553097
+	base = c8d40383c
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = fdc553097
