--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 63eb18376
+	base = 7ab38968e
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = 63eb18376
