--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 83a90e40a
+	base = 305033829
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 83a90e40a
