--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 864480edc
+	base = 68cb88beb
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 864480edc
