--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = c55ec62bb
+	base = f3939c040
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = c55ec62bb
