--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = e4af371e2
+	base = 31ce8f8f1
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = e4af371e2
