--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 07f002b29
+	base = 1609df96a
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = 07f002b29
