--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = dd992cee1
+	base = 5ccd2226b
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = dd992cee1
