--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = a40069c82
+	base = a44cf6ecb
 	trim = moveit_py
-	trimbase = 
+	trimbase = a40069c82
