--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = e79126173
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 2022b9b91
+	trimbase = 
