--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 74db03a11
+	base = 1980c6a60
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 74db03a11
