--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 965c82780
+	base = 6dd362a76
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = 965c82780
