--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 54d1eaf47
+	base = 1ff278fe4
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = 54d1eaf47
