--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 4e2a19dee
+	base = 2b26c8426
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = 4e2a19dee
