--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 1a644fb68
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = dae192d3a
+	trimbase = 
