--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 6a529fb1e
+	base = c4ced2d6e
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = 6a529fb1e
