--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = e5a878052
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 93354b310
+	trimbase = 
