--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 90169a467
+	base = da02563b8
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = 90169a467
