--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 059911709
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = e0e2519ef
+	trimbase = 
