--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 4306f48df
+	base = 1b2b4f4c1
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 
+	trimbase = 4306f48df
