--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 53baf0344
+	base = fd4843c02
 	trim = moveit_planners/stomp
-	trimbase = 
+	trimbase = 53baf0344
