--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = b301a7470
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 398c5fba9
+	trimbase = 
