--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 650fb289d
+	base = 50750fce9
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 
+	trimbase = 650fb289d
