--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 57947d867
 	base = 93f0c60db
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 01f581995
+	trimbase = 
