--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = b9cb11de2
+	base = b899d4a52
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = b9cb11de2
