--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 113a556cc
+	base = fa3511a6d
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 113a556cc
