--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = d57f41f99
+	base = 9c5ba95f1
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = d57f41f99
