--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = a9431c65b
+	base = c0811f40a
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = a9431c65b
