--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = dce28917b
+	base = bc3ef7221
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = dce28917b
