--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = e6202295e
+	base = 14ec3e1f6
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = e6202295e
