--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 81c25b01a
+	base = eb22b9e76
 	trim = moveit_core
-	trimbase = 
+	trimbase = 81c25b01a
