--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = 926acc760
+	base = 470cad23e
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = 926acc760
