--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = b1b62b053
+	base = 69a747220
 	trim = moveit_common
-	trimbase = 
+	trimbase = b1b62b053
