--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8316659cc
-	base = e54a145b8
+	base = faa1960a8
 	trim = moveit
-	trimbase = 
+	trimbase = e54a145b8
