--- a/tracks.yaml
+++ b/tracks.yaml
@@ -119,9 +119,9 @@ tracks:
       :{release_inc} --os-name fedora
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
-    devel_branch: null
+    devel_branch: jazzy
     last_version: 2.12.2
-    name: upstream_foxy
+    name: upstream
     patches: null
     release_inc: '1'
     release_repo_url: https://github.com/ros2-gbp/moveit2-release.git
@@ -129,7 +129,7 @@ tracks:
     ros_distro: jazzy
     vcs_type: git
     vcs_uri: https://github.com/moveit/moveit2.git
-    version: :{ask}
+    version: :{auto}
   kilted:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
