--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = a384d8d95
+	base = b6eeeb623
 	trim = moveit_core
-	trimbase = 
+	trimbase = a384d8d95
