--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 8cca14d85
+	base = d5b08c80a
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = 8cca14d85
