--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = 0018dad96
+	base = 0d4b9371e
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = 0018dad96
