--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = b5cc9d43a
+	base = 3e353f025
 	trim = moveit
-	trimbase = 
+	trimbase = b5cc9d43a
