--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ecbfe3889
-	base = c9cc85be5
+	base = 21b061b4c
 	trim = moveit_py
-	trimbase = 
+	trimbase = c9cc85be5
