--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = c652e50e1
 	base = d6635c875
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 8d417ad36
+	trimbase = 
